chore: first v after cagazo. Body and some basic visual interface done, next steps, tunning the fucking home

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,14 +1,14 @@
 {% extends 'core/base.html' %}
-{% block title %}Inicio{% endblock %}
+{% load static %}
+
+{% block title %}Bienvenido – Restoquiz{% endblock %}
+
 {% block content %}
-  <h1 class="mb-4">Bienvenido a Restoquiz</h1>
-  <p>Selecciona una opción:</p>
-  <div class="list-group">
-    <a href="{% url 'lista_categorias' %}" class="list-group-item list-group-item-action">
-      Ver Categorías
-    </a>
-    <a href="{% url 'tomar_quiz' %}" class="list-group-item list-group-item-action">
-      Tomar Quiz
-    </a>
+  <div class="container text-center mt-5">
+    <img src="{% static 'images/Logo_Restoquiz.png' %}"
+         alt="Restoquiz" class="mb-4" height="120">
+    <h1 class="fw-bold">Bienvenido a Restoquiz</h1>
+    <p class="lead">Aplicación de Encuestas y Cuestionarios Unifood.</p>
+    <p class="text-muted">By TI_Unifood JM 2025</p>
   </div>
 {% endblock %}
