--- a/core/templates/core/resultado_quiz.html
+++ b/core/templates/core/resultado_quiz.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Resultado</h1>
 <p><strong>Puntaje Total:</strong> {{ intento.puntaje_total }}</p>
-<h3>Por Categoría:</h3>
+<h3>Detalle por Categoría:</h3>
 <ul class="list-group">
   {% for cat, pts in breakdown %}
     <li class="list-group-item d-flex justify-content-between">
