--- a/core/templates/core/categoria_list.html
+++ b/core/templates/core/categoria_list.html
@@ -4,7 +4,7 @@
 <h1>Categorías</h1>
 <ul class="list-group">
   {% for c in categorias %}
-    <li class="list-group-item">{{ c.nombre }}</li>
+    <li class="list-group-item">{{ c.nombre }} (Peso {{ c.peso }})</li>
   {% endfor %}
 </ul>
 {% endblock %}
