--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,17 +1,19 @@
 {% extends 'core/base.html' %}
-{% block title %}Login{% endblock %}
+{% load static %}
+{% block title %}Iniciar sesión{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-4">
-    <h2>Iniciar sesión</h2>
-    <form method="post">{% csrf_token %}
+    <h2 class="mb-4">Iniciar sesión</h2>
+    <form method="post" action="{% url 'login' %}">
+      {% csrf_token %}
       <div class="mb-3">
-        <label class="form-label">Usuario</label>
-        <input class="form-control" name="username" autofocus>
+        <label class="form-label" for="id_username">Usuario</label>
+        <input class="form-control" id="id_username" name="username" type="text" autofocus>
       </div>
       <div class="mb-3">
-        <label class="form-label">Contraseña</label>
-        <input class="form-control" name="password" type="password">
+        <label class="form-label" for="id_password">Contraseña</label>
+        <input class="form-control" id="id_password" name="password" type="password">
       </div>
       <button class="btn btn-primary">Entrar</button>
     </form>
